<resources>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="facebook_app_id">961255812884002</string>
    <string name="app_name">PetNest</string>
    <string name="petnest_logo_description">PetNest Logo</string>
    <string name="tagline">Nested in love, rooted in care</string>
    <string name="get_started">GET STARTED</string>
    <string name="golden_retriever_puppy_description" translatable="false">Golden Retriever</string>
    <string name="cat_description">Cat</string>
    <string name="rabbit_description">Rabbit</string>
    <string name="welcome_message">Hey! Welcome</string>
    <string name="welcome_tagline">while you sit and stay - we’ll go out and play</string>
    <string name="welcome2_message">Now!</string>
    <string name="welcome2_tagline1">One tap for pet health monitoring, and locating your nearest Vet Clinics</string>
    <string name="welcome2_tagline2">Easy and best consultation bookings</string>
    <string name="welcome3_message">We provide</string>
    <string name="welcome3_tagline">24Hrs location tracking and health updates</string>
    <string name="next">Next</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_account">No Account?</string>
    <string name="register">Register</string>
    <string name="or_connect_with">or connect with</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="login_with_apple">Login With Apple</string>
    <string name="login_with_google">Login With Google</string>
    <string name="register_with_facebook">Login With Facebook</string>
    <string name="register_with_apple">Login With Apple</string>
    <string name="register_with_google">Login With Google</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="my_pets">My Pets</string>
    <string name="vet_locations">Vet Locations</string>
    <string name="pet_status">Pet Status</string>
    <string name="check_pets">Check Pets</string>
    <string name="home">HOME</string>
    <string name="discover">DISCOVER</string>
    <string name="explore">EXPLORE</string>
    <string name="manage">MANAGE</string>
    <string name="profile">PROFILE</string>
    <string name="dog_icon_description">Dog Icon</string>
    <string name="bella_name">Bella</string>
    <string name="roudy_name">Roudy</string>
    <string name="furry_name">Furry</string>
    <string name="map_description">Map with vet locations</string>
    <string name="health">Health</string>
    <string name="food">Food</string>
    <string name="mood">Mood</string>
    <string name="sign_out">Sign out</string>
    <string name="dog_face_photo_description">Dog face photo</string>
    <string name="portrait_photo_description">Portrait photo</string>
    <string name="about_me">About me</string>
    <string name="my_address">My Address</string>
    <string name="add_pet">Add Pet</string>
    <string name="add_device">Add Device</string>
    <string name="border_collie_dog_description">Border Collie Dog</string>
    <string name="border_collie_breed">Border Collie</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="sex">Sex</string>
    <string name="female">Female</string>
    <string name="about_bella">About Bella</string>
    <string name="bella_description">Bella is a very playful and energetic Border Collie. She loves to run in the park and play fetch. She is well-behaved and loves to cuddle.</string>
    <string name="health_status">Health Status</string>
    <string name="view_full_profile">View Full Profile</string>
    <string name="add_new_pet">Add New Pet</string>
    <string name="add_pet_photo">Add Pet Photo</string>
    <string name="pet_name">Pet Name</string>
    <string name="breed">Breed</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="save_pet">Save Pet</string>
    <string name="back_button">Back</string>
    <string name="phone_number">Owner Number</string>
    <string name="owner_icon_description">Owner Icon</string>
    <string name="app_logo_description">Petnest Logo</string>
    <string name="doctor_description">doctor image</string>
    <string name="default_web_client_id" translatable="false">751956835634-npmcupho20qvntoot0h13p8ik2of0ag7.apps.googleusercontent.com</string>
    <string name="back" />
    <string name="settings" />
    <string name="health_records" />
    <string name="health_icon">HEALTH</string>
    <string name="behavior">BEHAVIOR TOOL</string>
</resources>
