<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray_background"
    tools:context=".UI.Welcome.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/golden_retriever_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/golden_retriever_puppy_description"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingTop="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/golden_retriever_image">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/petnest_logo_description"
                android:src="@drawable/petnest_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/welcome_message"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/welcome_tagline"
                android:textColor="@color/gray_text"
                android:gravity="center_horizontal"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_yellow_welcome"
                android:fontFamily="@font/poppins_extrabold"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="999dp"
                android:elevation="4dp"
                android:drawableEnd="@drawable/ic_chevron_right"
                android:drawablePadding="8dp"
                android:gravity="center"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

