<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray_background"
    tools:context=".UI.Login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="32dp"
                android:paddingTop="48dp"
                android:paddingEnd="32dp"
                android:paddingBottom="24dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="32dp"
                    android:contentDescription="@string/petnest_logo_description"
                    android:src="@drawable/petnest_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/login_to_your_account"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp">

                        <EditText
                            android:id="@+id/login_edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_input_field"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:paddingStart="48dp"
                            android:paddingTop="12dp"
                            android:paddingEnd="16dp"
                            android:paddingBottom="12dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/poppins_regular"/>

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            android:contentDescription="@string/email_address"
                            android:src="@drawable/ic_email"
                            app:tint="@color/gray_text" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/login_edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_input_field"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingStart="48dp"
                            android:paddingTop="12dp"
                            android:paddingEnd="16dp"
                            android:paddingBottom="12dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/poppins_regular"/>

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            android:contentDescription="@string/password"
                            android:src="@drawable/ic_lock"
                            app:tint="@color/gray_text" />
                    </RelativeLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/yellow_accent"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="999dp"
                    android:elevation="4dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_account"
                        android:textColor="@color/gray_text"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:id="@+id/register_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/register"
                        android:textColor="@color/yellow_mood"
                        android:textSize="20sp"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/gray_divider" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/or_connect_with"
                        android:textColor="@color/gray_text"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/gray_divider" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">

                    <Button
                        android:id="@+id/login_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/blue_facebook"
                        android:fontFamily="@font/poppins_semibold"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/login_with_facebook"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:cornerRadius="999dp"
                        android:elevation="4dp"
                        android:drawableStart="@drawable/facebook"
                        android:drawablePadding="12dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="16dp"/>

                    <Button
                        android:id="@+id/login_apple"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/gray_apple"
                        android:fontFamily="@font/poppins_semibold"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/login_with_apple"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:cornerRadius="999dp"
                        android:elevation="4dp"
                        android:drawableStart="@drawable/apple"
                        android:drawablePadding="12dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="16dp"/>

                    <Button
                        android:id="@+id/login_google"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/red_google"
                        android:fontFamily="@font/poppins_semibold"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/login_with_google"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:cornerRadius="999dp"
                        android:elevation="4dp"
                        android:drawableStart="@drawable/google"
                        android:drawablePadding="12dp"
                        android:gravity="center_vertical|center_horizontal"/>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
